--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.4.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
 
 	</dependencies>
 
