--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,27 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/pfa
-spring.datasource.username=root
-spring.datasource.password=hamza2002.
+# spring.datasource.url=jdbc:mysql://localhost:3306/pfa
+spring.datasource.url=jdbc:mysql://pfa.chcuisiswlo7.eu-north-1.rds.amazonaws.com:3306/edutraq?useSSL=false&serverTimezone=UTC
+
+#  spring.datasource.username=root
+spring.datasource.username=admin
+# spring.datasource.password=hamza2002.
+spring.datasource.password=Hamz2002.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
 
 server.address=0.0.0.0
 
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=roomifyensa@gmail.com
+spring.mail.password=vzre ehmf qwct hfgj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
