--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.url=jdbc:mysql://pfa.chcuisiswlo7.eu-north-1.rds.amazonaws.com
 
 #  spring.datasource.username=root
 spring.datasource.username=admin
-# spring.datasource.password=hamza2002.
-spring.datasource.password=Hamz2002.
+
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
